--- a/client/src/app/user-mng/user-mng.component.html
+++ b/client/src/app/user-mng/user-mng.component.html
@@ -20,7 +20,7 @@
    <div class="col-2 d-flex align-items-center">{{user.fname}}</div> 
    <div class="col-3 d-flex align-items-center">{{user.email}}</div>  
    <div class="col-1 d-flex justify-content-center align-items-center">{{user.age}}</div>  
-   <div class="col-3 d-flex justify-content-center align-items-center">
+   <div class="col-3 d-flex justify-content-around align-items-center">
      <div class="btn-group btn-group-sm">
      <button (click)="updateUser(user)" class="btn btn-success">Update</button>
      <button (click)="deleteUser(user)" class="btn btn-danger">Delete</button>
