--- a/client/src/app/user-mng/user-mng.component.scss
+++ b/client/src/app/user-mng/user-mng.component.scss
@@ -1,25 +1,26 @@
 .container {
   padding: 10px;
+  font-size: 16px;
   .btn-secondary {
-      margin-bottom:10px;
+    margin-bottom:10px;
   }
   .row { 
-   > * {
-    height: 60px;
-    border: 1px solid #c9c9c9;
-    white-space: nowrap;
-    overflow: hidden; 
-    text-overflow: ellipsis
-  }    
-  .col-hdr {
-    color: blue;
-  } 
- }
-  .btn {
-    margin-right: 5px;
+     > * {
+      height: 50px;
+      border: 1px solid #c9c9c9;
+      white-space: nowrap;
+      overflow: hidden; 
+      text-overflow: ellipsis
+    }    
+    .col-hdr {
+      color: blue;
+    } 
+    .btn {
+        margin-right: 5px;
+    }
+    .btn-group-sm>.btn {
+        font-size: 18px;
+    }
   }
 }
 
-.modal-xl .modal-lg {
-    width: 80vw;
-  }
